# JobOfferings

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_ci_pipeline.py
.github/workflows/: build-push.yml  ci.yml  pylint-docker.yml  test-build-push.yml
app/: crud.py  db.py  main.py  models.py  schemas.py
kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  postgres-service.yaml  secret.yaml  service.yaml  statefulset.yaml
