[tool.poetry]
name = "jobofferings"
version = "0.1.0"
description = ""
authors = ["Jane <panovjane@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
SQLAlchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
